Users client configurations
